force-app/main/default/objects/Asset_Owner_History__c/Asset_Owner_History__c.object-meta.xml
<CustomObject>
    <label>Asset Owner History</label>
    <nameField>
        <displayFormat>AS-{000000}</displayFormat>
        <label>Asset Owner History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Owner Historys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>