force-app/main/default/objects/Asset_Owner_History__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Asset Owner Historys</relationshipLabel>
    <relationshipName>Asset_Owner_Historys</relationshipName>
    <type>Lookup</type>
</CustomField>