force-app/main/default/objects/Asset_Owner_History__c/fields/New_Owner__c.field-meta.xml
<CustomField>
    <fullName>New_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asset Owner Historys (New Owner)</relationshipLabel>
    <relationshipName>Asset_Owner_Historys1</relationshipName>
    <type>Lookup</type>
</CustomField>