force-app/main/default/objects/Asset_Owner_History__c/fields/Old_Owner__c.field-meta.xml
<CustomField>
    <fullName>Old_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Owner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asset Owner Historys</relationshipLabel>
    <relationshipName>Asset_Owner_Historys</relationshipName>
    <type>Lookup</type>
</CustomField>